<resources>
    <string name="app_name">Vendex</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!--Seleccionar Tipo-->
    <string name="txt_como_deseas_ingresar">¿Cómo deseas ingresar?</string>
    <string name="desc_vendedor">Gestiona tu tienda y productos</string>
    <string name="desc_cliente">Explora y realiza pedidos</string>
    <string name="btn_ingresar_vendedor">Vendedor</string>
    <string name="btn_ingresar_cliente">Cliente</string>
    <string name="tipoVendedor">Ingresar como vendedor</string>
    <string name="tipoCliente">Ingresar como cliente</string>

    <!--NavigationDrawer vendedor-->
    <string name="opcion_inicio_vendedor">Inicio</string>
    <string name="opcion_mi_tienda_vendedor">Mi Tienda</string>
    <string name="opcion_categorias_vendedor">Categorias</string>
    <string name="opcion_resenia_vendedor">Reseñas</string>
    <string name="opcion_cerrar_sesion_vendedor">Cerrar Sesión</string>

    <!--NavigationDrawer cliente-->
    <string name="opcion_inicio_cliente">Inicio</string>
    <string name="opcion_mi_perfil_cliente">Mi Perfil</string>
    <string name="opcion_cerrar_sesion_cliente">Cerrar Sesión</string>

    <!--Bottom navigation bar vendedor-->
    <string name="opcion_mis_productos_vendedor">Productos</string>
    <string name="opcion_mis_ordenes_vendedor">Órdenes</string>

    <!--Bottom navigation bar cliente-->
    <string name="opcion_tienda_cliente">Tienda</string>
    <string name="opcion_mis_ordenes_cliente">Mis Órdenes</string>

    <string name="txt_bienvenida">Bienvenido</string>

    <!--Registro de vendedor-->
    <string name="txtRegistroVendedor">Registro Vendedor</string>
    <string name="editNombresVendedor">Nombre Completo</string>
    <string name="editEmail">Email</string>
    <string name="editPassword">Password</string>
    <string name="editConfirmarPassword">Confirmar Password</string>
    <string name="botonRegistrarVendedor">Registrarme</string>

    <!--Registro de clientes-->
    <string name="txtRegistroCliente">Registro Cliente</string>
    <string name="editNombresCliente">Nombre Completo</string>
    <string name="botonRegistrarCliente">Registrarme</string>

    <!--Login de vendedor-->
    <string name="txtLoginVendedor">Login Vendedor</string>
    <string name="botonLogin">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
    <string name="textViewRegistarVendedor">Registrarme</string>

    <!--Login de vendedor-->
    <string name="txtLoginCliente">Login Cliente</string>
    <string name="botonLoginCliente">Ingresar</string>
    <string name="textViewRegistarCliente">Registrarme</string>

    <!--Productos-->
    <string name="txtAgregarProductos">Agregar Productos</string>
    <string name="editNombreProducto">Nombre del Producto</string>
    <string name="editDescripcionProducto">Descripción</string>
    <string name="categoria">Categoria</string>
    <string name="editPrecioProducto">Precio</string>
    <string name="txtDescuento">Descuento</string>
    <string name="editPrecioConDescuentoProducto">Precio con descuento aplicado</string>
    <string name="editNotaDescuentoProducto">Ejemplo: 10% Descuento</string>
    <string name="botonAgregarProducto">Agregar Producto</string>

    <!--Agregar Categorias-->
    <string name="editCategoria">Ingrese la Categoria</string>
    <string name="botonAgregarCategoria">Agregar Categoria</string>

    <!--Item Categorias Vendedor-->
    <string name="item_nombre_categoria_vendedor">Nombre Categoria</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>