<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grupo_opciones"
        android:checkableBehavior="single">

        <!--Inicio-->
        <item
            android:id="@+id/opcion_inicio_cliente"
            android:icon="@drawable/icono_inicio"
            android:title="@string/opcion_inicio_cliente" />
        <!--Mi Perfil-->
        <item
            android:id="@+id/opcion_mi_perfil_cliente"
            android:icon="@drawable/icono_mi_perfil"
            android:title="@string/opcion_mi_perfil_cliente" />
    </group>

    <!--Salir-->
    <item
        android:id="@+id/opcion_cerrar_sesion_cliente"
        android:icon="@drawable/icono_salir"
        android:title="@string/opcion_cerrar_sesion_cliente" />

</menu>