<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vendex_bg_dark"
    tools:context=".Cliente.LoginClienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/vendex_card_bg"
        android:paddingTop="0dp"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header_registro"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="32dp"
            android:paddingBottom="28dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:text="@string/txtLoginCliente"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/login_cliente"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
        </LinearLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputOutlined"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editEmail"
                android:hint="@string/editEmail"
                android:drawableStart="@drawable/icono_email"
                android:textColor="@color/colorBlanco"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputOutlined"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">


            <EditText
                android:id="@+id/editPassword"
                android:hint="@string/editPassword"
                android:drawableStart="@drawable/icono_password"
                android:textColor="@color/colorBlanco"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Boton Login-->
        <com.google.android.material.button.MaterialButton
            app:backgroundTint="@color/vendex_blue_primary"
            android:layout_marginBottom="10dp"
            android:id="@+id/botonLoginCliente"
            android:text="@string/botonLoginCliente"
            app:cornerRadius="12dp"
            android:textAllCaps="true"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--No tiene cuenta-->
        <TextView
            android:id="@+id/txtNoCuenta"
            android:text="@string/txtNoCuenta"
            android:textColor="@color/vendex_blue_primary"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Registrar Vendedor-->
        <TextView
            android:id="@+id/textViewRegistarCliente"
            android:text="@string/textViewRegistarCliente"
            android:textColor="@color/vendex_blue_primary"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>